Bug 177533, fix most XMLHttpRequest memory leaks and other minor issues, r=darin, sr=jst, a=asa.